Add python tool for generating Kafka request classes; keep all versions of request in a single structure
Signed-off-by: Adam Kotwasinski <adam.kotwasinski@gmail.com>

--- a/source/extensions/filters/network/kafka/protocol_code_generator/kafka_request_resolver_cc.j2
+++ b/source/extensions/filters/network/kafka/protocol_code_generator/kafka_request_resolver_cc.j2
@@ -1,7 +1,7 @@
 // DO NOT EDIT - THIS FILE WAS GENERATED
 // clang-format off
-#include "extensions/filters/network/kafka/generated/requests.h"
-#include "extensions/filters/network/kafka/kafka_request.h"
+#include "extensions/filters/network/kafka/requests.h"
+#include "extensions/filters/network/kafka/kafka_request_parser.h"
 #include "extensions/filters/network/kafka/parser.h"
 
 namespace Envoy {
@@ -14,18 +14,10 @@ const RequestParserResolver RequestParserResolver::INSTANCE;
 ParserSharedPtr RequestParserResolver::createParser(int16_t api_key, int16_t api_version,
                                                     RequestContextSharedPtr context) const {
 
-  if (8 == api_key && 0 == api_version) {
-    return std::make_shared<OffsetCommitRequestV0Parser>(context);
-  }
-  if (8 == api_key && 1 == api_version) {
-    return std::make_shared<OffsetCommitRequestV1Parser>(context);
-  }
-  if (8 == api_key && 2 == api_version) {
-    return std::make_shared<OffsetCommitRequestV2Parser>(context);
-  }
-  if (8 == api_key && 3 == api_version) {
-    return std::make_shared<OffsetCommitRequestV3Parser>(context);
-  }
+{% for request_type in request_types %}{% for field_list in request_type.compute_field_lists() %}
+  if ({{ request_type.get_extra('api_key') }} == api_key && {{ field_list.version }} == api_version) {
+    return std::make_shared<{{ request_type.name }}V{{ field_list.version }}Parser>(context);
+  }{% endfor %}{% endfor %}
   return std::make_shared<SentinelParser>(context);
 }
 
