protodoc: Add redirects for v2 protos to current version
Signed-off-by: Ryan Northey <ryan@synca.io>

--- a/docs/root/_static/css/envoy.css
+++ b/docs/root/_static/css/envoy.css
@@ -36,3 +36,11 @@ table.docutils div.line-block {
     padding: 2px 2px;
     border: solid #eee 1px;
 }
+
+.inline-tip,
+.inline-note,
+.inline-warning {
+    clear: none !important;
+    display: inline-block !important;
+    max-width: 50%;
+}
